Fixed lightbox error in index and listing page. Fixed word wrapping in listing description

--- a/web_app/static/css/style.css
+++ b/web_app/static/css/style.css
@@ -730,6 +730,8 @@ h2 {
 .listcontainer .stream_details {
     padding-left: 30px;
     padding-top: 20px;
+    float: left;
+    width: 60%;
 }
 
 #accordion .ui-accordion-content {
